<resources>
    <string name="Initialization_blood_glucose">Initialization of blood glucose function</string>
    <string name="a_total_of">A total of</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abnormal">Abnormal</string>
    <string name="abnormal_bt">Temperature measurement abnormal, please try again</string>
    <string name="abnormal_login">Operation abnormal, please try again!</string>
    <string name="about">About</string>
    <string name="according_to_prompt">According to the prompt, insert the test strip into the blood glucose test strip interface as shown in the figure below.</string>
    <string name="account_exists">This account already exists, please do not register again!</string>
    <string name="add_member">Add family members</string>
    <string name="adding_members">Adding members</string>
    <string name="affirm">Affirm</string>
    <string name="after_blood_is_dripped">After the blood is dripped correctly, you need to wait for 15 seconds.</string>
    <string name="after_clicking_function">After clicking, the page of Initialize blood glucose function, please wait appears. At this time, you need to wait for a period of time to wait for the completion of the blood glucose calibration function.</string>
    <string name="after_test_paper">After the test paper is inserted correctly, the following page will pop up. As shown in the figure, drop the blood from your finger on the collection area at the front of the test paper correctly.</string>
    <string name="after_the_calibration">After the calibration is completed, the prompt Please insert the blood glucose test strip into the blood glucose test port of the device will pop up.</string>
    <string name="age">age</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="allow">Allow</string>
    <string name="already_the_latest_version">This is the latest version</string>
    <string name="app_name">MinttiVision</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arms_flat">Arms flat</string>
    <string name="average_heart_rate">Heart rate:</string>
    <string name="before_fasting">Before fasting</string>
    <string name="being_generated">Report being generated</string>
    <string name="between_head_two_fingers">The distance between the side of the device with the infrared sensor and the head is two fingers.</string>
    <string name="bg_calculate_timeout">Calculation result timed out</string>
    <string name="bg_init_failed">Failed to initialize blood glucose function</string>
    <string name="ble_connect_timeout">Connection timed out, please check if the device is turned on or the distance is too far</string>
    <string name="ble_disconnect">Bluetooth disconnected</string>
    <string name="ble_not_support">Ble is not supported</string>
    <string name="blood_collected">A blood sample has been collected, please wait</string>
    <string name="blood_collection">Blood collection</string>
    <string name="blood_collection_time_out">Blood sample collection timed out</string>
    <string name="blood_glucose">Blood glucose</string>
    <string name="blood_glucose_test_strip_correction_code">Blood glucose text strip correction code:</string>
    <string name="blood_oxygen">Blood oxygen</string>
    <string name="blood_oxygen2">Blood\10oxygen</string>
    <string name="blood_pressure">Blood pressure</string>
    <string name="blood_spo2_hr">SpO2/Heart rate</string>
    <string name="blood_sugar_unit">Blood sugar unit</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_binding">Bluetooth binding</string>
    <string name="body_temperature">Body temperature</string>
    <string name="body_temperaturen">Body\10temperature</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brvah_app_name">Library</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="btn_affirm">Reset password</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_register">Sign up</string>
    <string name="btn_submit">Submit</string>
    <string name="caclulat_bg_time_out">Calculating sample blood glucose timeout</string>
    <string name="cancel">Cancel</string>
    <string name="centigrade_degree_unit">%1$.1f℃</string>
    <string name="centigrade_unit">℃</string>
    <string name="change_nickname">Change nickname</string>
    <string name="change_test_paper">Please change the test paper and try again</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="charging">Charging</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_share_data">Please select the data you want to share first</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_bind_bluetooth">Click Click to connect on the upper right corner of the measurement homepage to bind the Bluetooth connection</string>
    <string name="click_connect">Connect</string>
    <string name="click_start_measurement">Click to start measurement</string>
    <string name="click_to_measure">Click to measure</string>
    <string name="click_too_fast">Click too fast!</string>
    <string name="click_unbind">Click on my device option in my interface,\10 Enter the interface of my device and click the unbind button\10 You can unbind the previously bound Bluetooth device</string>
    <string name="collapse_calendar">Collapse calendar</string>
    <string name="common_country_region">Country/Region</string>
    <string name="common_search">Search</string>
    <string name="connect_failed">Connect failed</string>
    <string name="connect_firist">Please connect the device first</string>
    <string name="connect_the_device">Connect the device</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="contact_way">Contact :</string>
    <string name="convenient_contact_you">Easy to contact you</string>
    <string name="country_china">China</string>
    <string name="cv_app_name">CalendarView</string>
    <string name="data_cannot_be_empty">Data cannot be empty</string>
    <string name="data_deletion_successful">Data deletion successful</string>
    <string name="data_submission">Data submission...</string>
    <string name="data_too_short_no_save">The data is too short, this record will not be saved!</string>
    <string name="date_for_data">MMMM dd</string>
    <string name="day">Day</string>
    <string name="deleted_member">A deleted member is deleted along with his personal data</string>
    <string name="deleting_members">Deleting members in progress</string>
    <string name="deny">Deny</string>
    <string name="device_firm_upgrade">Upgrade</string>
    <string name="device_firmware_version">Firmware</string>
    <string name="device_is_charging">The device is charging and cannot be measured</string>
    <string name="device_is_unbind">Are you sure you want to unbind</string>
    <string name="device_unbind">Unbind</string>
    <string name="device_unbind_success">Unbind successfully</string>
    <string name="device_unbound">Unbound</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_channel_description">Shows DFU progress.</string>
    <string name="dfu_channel_name">DFU</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_aborting">Aborting…</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_connecting">Connecting…</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_disconnecting">Disconnecting…</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="ecg_measure_duration">Duration:</string>
    <string name="enter_age">Please enter age (can be blank)</string>
    <string name="enter_node">Please enter the remark information (can be blank)</string>
    <string name="enter_pdf_name">Please enter your name (can be blank)</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="gain">Gain</string>
    <string name="gain_">Gain：</string>
    <string name="hrv">HRV:</string>
    <string name="log_out">Log out</string>
    <string name="man">Man</string>
    <string name="month">Month</string>
    <string name="my_device">Device</string>
    <string name="my_username">My username</string>
    <string name="node">Postscript</string>
    <string name="operation_guide">Operation guide</string>
    <string name="paper_speed">Paper speed</string>
    <string name="paper_speed_">Paper speed:</string>
    <string name="pdf_name">Name</string>
    <string name="respiratory_rate">Respiratory rate:</string>
    <string name="rri_max">RRI maximum:</string>
    <string name="rri_min">RRI minimum:</string>
    <string name="setting">Setting</string>
    <string name="sex">Gender</string>
    <string name="start_measure">Start measuring</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="time_consuming">Duration:</string>
    <string name="unit">Unit:</string>
    <string name="week">Week</string>
    <string name="woman">Woman</string>
</resources>