<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" app:cardCornerRadius="@dimen/dp_10">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_15" android:layout_marginTop="@dimen/dp_15" android:layout_marginRight="@dimen/dp_15">
            <TextView android:textSize="@dimen/dp_16" android:textColor="@color/gray_333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pdf_name"/>
            <EditText android:textSize="@dimen/dp_12" android:textColor="@color/gray_333" android:textColorHint="@color/gray_line_ddd" android:id="@+id/et_name" android:background="@null" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_5" android:layout_marginRight="@dimen/dp_5" android:hint="@string/enter_pdf_name" android:maxLength="9" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_15" android:layout_marginTop="@dimen/dp_15" android:layout_marginRight="@dimen/dp_15">
            <TextView android:textSize="@dimen/dp_16" android:textColor="@color/gray_333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/age"/>
            <EditText android:textSize="@dimen/dp_12" android:textColor="@color/gray_333" android:textColorHint="@color/gray_line_ddd" android:id="@+id/et_age" android:background="@null" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_5" android:layout_marginRight="@dimen/dp_5" android:hint="@string/enter_age" android:maxLength="3" android:layout_weight="1" android:inputType="number"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_15" android:layout_marginTop="@dimen/dp_15" android:layout_marginRight="@dimen/dp_15">
            <TextView android:textSize="@dimen/dp_16" android:textColor="@color/gray_333" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sex"/>
            <RadioGroup android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@+id/radio_group_gender" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_5">
                <RadioButton android:textColor="@color/gray_333" android:id="@+id/radio_btn_male" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:text="@string/man" android:drawableLeft="@drawable/bg_radio_btn_selector_blue" android:drawablePadding="@dimen/dp_3"/>
                <RadioButton android:textColor="@color/gray_333" android:id="@+id/radio_btn_female" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_15" android:button="@null" android:text="@string/woman" android:drawableLeft="@drawable/bg_radio_btn_selector_blue" android:drawablePadding="@dimen/dp_3"/>
            </RadioGroup>
        </LinearLayout>
        <TextView android:textSize="@dimen/dp_16" android:textColor="@color/gray_333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_15" android:layout_marginTop="@dimen/dp_15" android:text="@string/node"/>
        <EditText android:textSize="@dimen/dp_12" android:textColorHint="@color/gray_line_ddd" android:gravity="top|left|center_vertical|center_horizontal|center" android:id="@+id/et_notes" android:background="@null" android:layout_width="match_parent" android:layout_height="@dimen/dp_60" android:layout_marginLeft="@dimen/dp_15" android:layout_marginTop="@dimen/dp_10" android:layout_marginRight="@dimen/dp_15" android:hint="@string/enter_node"/>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:textSize="@dimen/dp_16" android:textColor="@color/colorPrimary" android:id="@+id/btn_left" android:background="?android:attr/selectableItemBackground" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:textAllCaps="false"/>
            <View android:background="@color/gray_line_ddd" android:layout_width="1dp" android:layout_height="@dimen/dp_30"/>
            <Button android:textSize="@dimen/dp_16" android:textColor="@color/colorPrimary" android:id="@+id/btn_right" android:background="?android:attr/selectableItemBackground" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
