<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/common_include_toolbar_white"/>
    <com.p020kl.healthmonitor.views.UserItemView android:id="@+id/uiv_set_temperature" android:layout_width="match_parent" android:layout_height="@dimen/dp_50" app:itemText="@string/temperature_unit" app:itemUnit="℃"/>
    <View android:background="@color/lightGray" android:layout_width="match_parent" android:layout_height="@dimen/dp_1" android:layout_marginLeft="@dimen/dp_15"/>
    <com.p020kl.healthmonitor.views.UserItemView android:id="@+id/uiv_set_time" android:layout_width="match_parent" android:layout_height="@dimen/dp_50" app:itemText="@string/paper_speed" app:itemUnit="25mm/s"/>
    <View android:background="@color/lightGray" android:layout_width="match_parent" android:layout_height="@dimen/dp_1" android:layout_marginLeft="@dimen/dp_15"/>
    <com.p020kl.healthmonitor.views.UserItemView android:id="@+id/uiv_set_gain" android:layout_width="match_parent" android:layout_height="@dimen/dp_50" app:itemText="@string/gain" app:itemUnit="10mm/mv"/>
    <View android:background="@color/lightGray" android:layout_width="match_parent" android:layout_height="@dimen/dp_1" android:layout_marginLeft="@dimen/dp_15"/>
    <com.p020kl.healthmonitor.views.UserItemView android:id="@+id/uiv_bg_unit" android:layout_width="match_parent" android:layout_height="@dimen/dp_50" app:itemText="@string/blood_sugar_unit" app:itemUnit="mmol/L"/>
    <View android:background="@color/lightGray" android:layout_width="match_parent" android:layout_height="@dimen/dp_1" android:layout_marginLeft="@dimen/dp_15"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/dp_50" android:layout_marginLeft="@dimen/dp_15" android:layout_marginRight="@dimen/dp_15" android:layout_marginHorizontal="@dimen/dp_15">
        <TextView android:textSize="@dimen/dp_16" android:textColor="@color/gray666" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@+id/tv_myitem_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_sound" android:layout_weight="1"/>
        <Switch android:layout_gravity="center_vertical" android:id="@+id/sb_warn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:thumb="@drawable/switch_ios_thumb" android:track="@drawable/switch_ios_track_selector"/>
    </LinearLayout>
    <View android:background="@color/grayeee" android:layout_width="match_parent" android:layout_height="@dimen/dp_10"/>
</LinearLayout>
