<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="@dimen/dp_15" android:textColor="@color/gray666" android:gravity="center_vertical" android:id="@+id/tv_list_data" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/dp_40" android:layout_marginLeft="@dimen/dp_25" android:text="2019年11月"/>
    <androidx.cardview.widget.CardView android:id="@+id/cv_btm_broke" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_15" android:layout_marginTop="@dimen/dp_10" android:layout_marginRight="@dimen/dp_15" android:layout_marginBottom="@dimen/dp_5" android:elevation="@dimen/dp_8" app:cardCornerRadius="@dimen/dp_8">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="@dimen/dp_5" android:layout_marginTop="@dimen/dp_15" android:layout_marginRight="@dimen/dp_5" android:layout_marginBottom="@dimen/dp_15">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
                <TextView android:textSize="@dimen/dp_13" android:textColor="@color/gray_333" android:id="@+id/tv_ecg_data" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="2019-12-12 11:22:25"/>
                <com.p020kl.healthmonitor.views.MeasureItemLevelView android:id="@+id/mlv_ecg_rrimax" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_25" app:measure_type_level="@string/rri_max" app:measure_unit_level="ms" app:measure_value_level="0"/>
                <com.p020kl.healthmonitor.views.MeasureItemLevelView android:id="@+id/mlv_ecg_heart_rate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_25" app:measure_type_level="@string/average_heart_rate" app:measure_unit_level="BPM" app:measure_value_level="0"/>
                <com.p020kl.healthmonitor.views.MeasureItemLevelView android:id="@+id/mlv_ecg_br" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_25" app:measure_type_level="@string/respiratory_rate" app:measure_unit_level="BPM" app:measure_value_level="0"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.p020kl.healthmonitor.views.MeasureItemLevelView android:id="@+id/mlv_ecg_time" android:layout_width="wrap_content" android:layout_height="wrap_content" app:measure_type_level="@string/time_consuming" app:measure_unit_level="s" app:measure_value_level="0"/>
                <com.p020kl.healthmonitor.views.MeasureItemLevelView android:id="@+id/mlv_ecg_rrimin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_25" app:measure_type_level="@string/rri_min" app:measure_unit_level="ms" app:measure_value_level="0"/>
                <com.p020kl.healthmonitor.views.MeasureItemLevelView android:id="@+id/mlv_ecg_hrv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_25" app:measure_type_level="@string/hrv" app:measure_unit_level="ms" app:measure_value_level="0"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
